--- a/public/about/index.html
+++ b/public/about/index.html
@@ -10,9 +10,9 @@
   <title> about &middot; my new hugo site </title>
 
   
-  <link rel="stylesheet" href="http://localhost:1313/css/poole.css">
-  <link rel="stylesheet" href="http://localhost:1313/css/syntax.css">
-  <link rel="stylesheet" href="http://localhost:1313/css/hyde.css">
+  <link rel="stylesheet" href="http://designmusings.herokuapp.com/css/poole.css">
+  <link rel="stylesheet" href="http://designmusings.herokuapp.com/css/syntax.css">
+  <link rel="stylesheet" href="http://designmusings.herokuapp.com/css/hyde.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   
