--- a/public/about/index.html
+++ b/public/about/index.html
@@ -7,13 +7,13 @@
     
     <link rel="stylesheet" href="/css/main.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="/images/logo.jpg"/>
-    <link href="/paigebennett.com/index.xml" rel="alternate" type="application/rss+xml" title="Musings on Design" />
-    <meta name="title" content="/paigebennett.com">
-    <link rel="canonical" href="/paigebennett.com">
+    <link rel="apple-touch-icon" href="/images/logo_paige.png"/>
+    <link href="http://localhost:1313/index.xml" rel="alternate" type="application/rss+xml" title="Musings on Design" />
+    <meta name="title" content="http://localhost:1313">
+    <link rel="canonical" href="http://localhost:1313">
     <meta property="og:title" content="Musings on Design"/>
-    <meta property="og:url" content="/paigebennett.com"/>
-    <meta property="og:image" content="/paigebennett.com/images/logo.jpg"/>   
+    <meta property="og:url" content="http://localhost:1313"/>
+    <meta property="og:image" content="http://localhost:1313/images/logo_paige.png"/>   
     <meta property="og:site_name" content="Musings on Design">
 </head>
 <body>
@@ -22,7 +22,7 @@
     <header>
         <nav id="navigation">
             <a class="brand" href="/">
-                <img src="/images/logo.jpg" alt="Inc">
+                <img src="/images/logo_paige.png" alt="Inc">
             </a>
             <a href="/" class="home">Musings on Design</a>
             <a href="/blog/">Posts</a>
@@ -103,6 +103,9 @@ I love the written word and figuring out the &lsquo;why?&rsquo; in things. Welco
 
 
   
-</body>
+<script>document.write('<script src="http://'
+        + (location.host || 'localhost').split(':')[0]
+		+ ':1313/livereload.js?mindelay=10"></'
+        + 'script>')</script></body>
 </html>
 
