Added the portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
                 <img src="/images/logo_paige.png" alt="Inc">
             </a>
             <a href="/blog/">Blog</a>
+            <a href="/portfolio/">Portfolio</a>
             <a href="/about/">About</a>
         </nav>
         <nav class="tagline">
@@ -112,6 +113,7 @@
         <nav>
             <a href="/">Paige Bennett</a> &middot;
             <a href="/blog/">Blog</a> &middot; 
+            <a href="/portfolio/">Portfolio</a> &middot; 
             <a href="/about/">About</a>
         </nav>
         
