--- a/public/about/index.html
+++ b/public/about/index.html
@@ -25,6 +25,7 @@
                 <img src="/images/logo_paige.png" alt="Inc">
             </a>
             <a href="/blog/">Blog</a>
+            <a href="/portfolio/">Portfolio</a>
             <a href="/about/">About</a>
         </nav>
         <nav class="tagline">
@@ -60,6 +61,7 @@ I love the written word and figuring out the &lsquo;why?&rsquo; in things. Welco
         <nav>
             <a href="/">Paige Bennett</a> &middot;
             <a href="/blog/">Blog</a> &middot; 
+            <a href="/portfolio/">Portfolio</a> &middot; 
             <a href="/about/">About</a>
         </nav>
         
