--- a/public/stay_in_touch/index.html
+++ b/public/stay_in_touch/index.html
@@ -6,6 +6,7 @@
     <title>Musings on Design &mdash; </title>
     
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" >
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/images/logo_paige.png"/>
     <link href="http://localhost:1313/index.xml" rel="alternate" type="application/rss+xml" title="Musings on Design" />
