--- a/public/about/index.html
+++ b/public/about/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" >
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/images/logo_paige.png"/>
-    <link href="http://localhost:57287/index.xml" rel="alternate" type="application/rss+xml" title="Musings on Design" />
-    <meta name="title" content="http://localhost:57287">
-    <link rel="canonical" href="http://localhost:57287">
+    <link href="http://paigebennett.com/index.xml" rel="alternate" type="application/rss+xml" title="Musings on Design" />
+    <meta name="title" content="http://paigebennett.com">
+    <link rel="canonical" href="http://paigebennett.com">
     <meta property="og:title" content="Musings on Design"/>
-    <meta property="og:url" content="http://localhost:57287"/>
-    <meta property="og:image" content="http://localhost:57287/images/logo_paige.png"/>   
+    <meta property="og:url" content="http://paigebennett.com"/>
+    <meta property="og:image" content="http://paigebennett.com/images/logo_paige.png"/>   
     <meta property="og:site_name" content="Musings on Design">
 </head>
 <body>
@@ -90,9 +90,6 @@ I love the written word and figuring out the &lsquo;why?&rsquo; in things. Welco
 
 
   
-<script>document.write('<script src="http://'
-        + (location.host || 'localhost').split(':')[0]
-		+ ':57287/livereload.js?mindelay=10"></'
-        + 'script>')</script></body>
+</body>
 </html>
 
