--- a/public/about/index.html
+++ b/public/about/index.html
@@ -54,7 +54,7 @@
 </figure>
 
 <p>Southerner meets San Francisco. I began my career in a newsroom, made a home in Oman and Austin along the way.
-I love the written word and figuring out the &lsquo;why?&rsquo; in things. Welcome to my journey into UX design. Pull up a chair and I&rsquo;ll pour you a drink.</p>
+I love the written word and figuring out the &lsquo;why?&rsquo; in things. Welcome to my journey into UX design. I&rsquo;m learning to code and building this site piece by piece. Join me on this journey. Pull up a chair and I&rsquo;ll pour you a drink.</p>
 
             
 
