Adds Contact Form Page

--- a/public/stay_in_touch/index.html
+++ b/public/stay_in_touch/index.html
@@ -25,6 +25,7 @@
             <a href="/blog/">Blog</a>
             <a href="/portfolio/">Portfolio</a>
             <a href="/about/">About</a>
+            <a href="/contact/">Contact</a>
         </nav>
         <nav class="tagline">
             
