--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" >
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/images/logo_paige.png"/>
-    <link href="http://paigebennett.com/index.xml" rel="alternate" type="application/rss+xml" title="Musings on Design" />
-    <meta name="title" content="http://paigebennett.com">
-    <link rel="canonical" href="http://paigebennett.com">
+    <link href="http://localhost:1313/index.xml" rel="alternate" type="application/rss+xml" title="Musings on Design" />
+    <meta name="title" content="http://localhost:1313">
+    <link rel="canonical" href="http://localhost:1313">
     <meta property="og:title" content="Musings on Design"/>
-    <meta property="og:url" content="http://paigebennett.com"/>
-    <meta property="og:image" content="http://paigebennett.com/images/logo_paige.png"/>   
+    <meta property="og:url" content="http://localhost:1313"/>
+    <meta property="og:image" content="http://localhost:1313/images/logo_paige.png"/>   
     <meta property="og:site_name" content="Musings on Design">
 </head>
 <body>
@@ -45,18 +45,18 @@
             <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
     <div class="thumbnail">
         <h4>
-          <a href="../blog/pinterest">Pinterest</a>
+          <a href="../blog/vint">Vint</a>
         </h4>
-        <img src="/images/pinterest-logo.jpg"/>
+        <img src="/images/vint-logo.png"/>
     </div>
 </div>
         
             <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
     <div class="thumbnail">
         <h4>
-          <a href="../blog/vint">Vint</a>
+          <a href="../blog/pinterest">Pinterest</a>
         </h4>
-        <img src="/images/vint-logo.png"/>
+        <img src="/images/pinterest-logo.jpg"/>
     </div>
 </div>
         
@@ -96,5 +96,8 @@
 
 
   
-</body>
+<script>document.write('<script src="http://'
+        + (location.host || 'localhost').split(':')[0]
+		+ ':1313/livereload.js?mindelay=10"></'
+        + 'script>')</script></body>
 </html>
