--- a/public/contact-thanks/index.html
+++ b/public/contact-thanks/index.html
@@ -42,7 +42,7 @@
 
     <div class="container">
         <section>
-            <h2>I'll be in touch.</h2>
+            <h2>I'll be in touch. In the meantime, check out my recent <a href="/portfolio/">projects</a>.</h2>
 
         </section>
     </div>
