adds image caption class

--- a/public/projects/pinterest/index.html
+++ b/public/projects/pinterest/index.html
@@ -71,7 +71,8 @@
 
 <p>Alee wants to be able to see specific categories of pins that pinners she follows have shared. With this function, Alee can take her curated content and curate it further, creating a main feed that features only those categories she&rsquo;s interested in.</p>
 
-<p><a href="/images/AleePersona.jpg" data-lightbox="persona" data-title="Alee Persona"><img src="/images/AleePersona.jpg"/></a></p>
+<p><a href="/images/AleePersona.jpg" data-lightbox="persona" data-title="Alee Persona"><img src="/images/AleePersona.jpg"/></a>
+<div class="image-caption">Alee Persona</div></p>
 
 <p><strong>Process</strong></p>
 
