--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
 
 <div class="site-index-top-spacer"></div>
-<div class="blog-cover" style="background-image:url(/images/letters.jpg);">
+<div class="blog-cover" style="background-image:url(/images/cover_image.jpg);">
     
     <section>
         <div class="container">
