--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -44,11 +44,12 @@
         
             <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
     <div class="thumbnail">
-    	<div class="image-container">
-    		<span class="image-container-helper"></span>
-	        <img src="/images/pinterest-logo.jpg"/>
-        </div>
-        <a href="../projects/pinterest"></a>
+        <a href="../projects/pinterest">
+			<div class="image-container">
+				<span class="image-container-helper"></span>
+		        <img src="/images/pinterest-logo.jpg"/>
+		    </div>
+        </a>
 		I created a new filter feature for Pinterest&#39;s main feed. This project includes a persona, task flow, wireframes and a prototype.        
     </div>
 </div>
@@ -56,11 +57,12 @@
         
             <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
     <div class="thumbnail">
-    	<div class="image-container">
-    		<span class="image-container-helper"></span>
-	        <img src="/images/vint-logo.png"/>
-        </div>
-        <a href="../projects/vint"></a>
+        <a href="../projects/vint">
+			<div class="image-container">
+				<span class="image-container-helper"></span>
+		        <img src="/images/vint-logo.png"/>
+		    </div>
+        </a>
 		After conducting a usability test on the Vint app, I recommended several design changes to create a better user experience.        
     </div>
 </div>
