--- a/public/projects/pinterest/index.html
+++ b/public/projects/pinterest/index.html
@@ -100,7 +100,7 @@
 
 <p><strong>UI Sketches</strong></p>
 
-<p><a href="/images/WireFrames.jpg" data-lightbox="wireFrames" data-title="WireFrames"><img src="/images/WireFrames.jpg"/></a></p>
+<p><a href="/images/UIsketches.jpg" data-lightbox="wireFrames" data-title="WireFrames"><img src="/images/UIsketches.jpg"/></a></p>
 
 <p>One thing I learned during this part of the process was that the categories needed to be a pop up box, as opposed to a separate window. Sketching out 6 different ways to display categories helped clarify that this was the more effective route.</p>
 
@@ -109,11 +109,12 @@
 <p>After creating my wireframes, I did a short usability study with a few people and noticed something immediately: the filter button was confusing.
 I had used the filter icon that&rsquo;s part of Andriod design convention. However, the feedback I received was that users thought the button was meant to sort content&hellip;.not choose a category. Uh oh!</p>
 
-<p><a href="/images/FilterExample.jpg" data-lightbox="filter-example" data-title="Filter Example"><img src="/images/FilterExample.jpg"/></a></p>
+<p><a href="/images/Filter.jpg" data-lightbox="filter-example" data-title="Filter Example"><img src="/images/Filter.jpg"/></a>
+<div class="image-caption">Does this filter or sort?</div></p>
 
 <p>At first, I thought to use the same categories icon that Pinterest has on its site. However, this icon on mobile can be confusing. After looking at how other Android apps displayed their filter button, I used Fitmob as inspiration.</p>
 
-<p><a href="/images/FitmobExample.png" data-lightbox="fitmob-example" data-title="Fitmob Example"><img src="/images/FitmobExample.png"/></a></p>
+<p><a href="/images/Fitmob.jpg" data-lightbox="fitmob-example" data-title="Fitmob Example"><img src="/images/Fitmob.jpg"/></a></p>
 
 <p>It&rsquo;s simple and direct. There&rsquo;s no doubting what this button does.</p>
 
@@ -121,9 +122,7 @@ I had used the filter icon that&rsquo;s part of Andriod design convention. Howev
 
 <p><a href="/images/Wireframes 1.jpg" data-lightbox="wireframes-group" data-title="Wireframe 1"><img src="/images/Wireframes 1.jpg"/></a></p>
 
-<p><a href="/images/Wireframes 2.jpg" data-lightbox="wireframes-group" data-title="Wireframe 2"><img src="/images/Wireframes 2.jpg"/></a></p>
-
-<p><a href="/images/Wireframes 3.jpg" data-lightbox="wireframes-group" data-title="Wireframe 3"><img src="/images/Wireframes 3.jpg"/></a></p>
+<p><a href="/images/Updatedwireframe.jpg" data-lightbox="wireframes-group" data-title="Wireframe 2"><img src="/images/Updatedwireframe.jpg"/></a></p>
 
 <p><a href="/images/Wireframes 4.jpg" data-lightbox="wireframes-group" data-title="Wireframe 4"><img src="/images/Wireframes 4.jpg"/></a></p>
 
@@ -132,10 +131,6 @@ I had used the filter icon that&rsquo;s part of Andriod design convention. Howev
 <p>My prototype will help give you a taste at how this feature would work.</p>
 
 <iframe width="560" height="420" src="//www.youtube.com/embed/o3G0VbCgDjo" frameborder="0" allowfullscreen></iframe>
-
-<p>Here&rsquo;s an example of how this feature might look on the app.</p>
-
-<p><a href="/images/HighFidelity.jpg" data-lightbox="high-fidelity" data-title="High Fidelity"><img src="/images/HighFidelity.jpg"/></a></p>
 
 <p><strong>Learnings &amp; Next Steps</strong></p>
 
