--- a/public/projects/pinterest/index.html
+++ b/public/projects/pinterest/index.html
@@ -109,12 +109,12 @@
 <p>After creating my wireframes, I did a short usability study with a few people and noticed something immediately: the filter button was confusing.
 I had used the filter icon that&rsquo;s part of Andriod design convention. However, the feedback I received was that users thought the button was meant to sort content&hellip;.not choose a category. Uh oh!</p>
 
-<p><a href="/images/Filter.jpg" data-lightbox="filter-example" data-title="Filter Example"><img src="/images/Filter.jpg"/></a>
+<p><a href="/images/filter.jpg" data-lightbox="filter-example" data-title="Filter Example"><img src="/images/filter.jpg"/></a>
 <div class="image-caption">Does this filter or sort?</div></p>
 
 <p>At first, I thought to use the same categories icon that Pinterest has on its site. However, this icon on mobile can be confusing. After looking at how other Android apps displayed their filter button, I used Fitmob as inspiration.</p>
 
-<p><a href="/images/Fitmob.jpg" data-lightbox="fitmob-example" data-title="Fitmob Example"><img src="/images/Fitmob.jpg"/></a></p>
+<p><a href="/images/fitmob.jpg" data-lightbox="fitmob-example" data-title="Fitmob Example"><img src="/images/fitmob.jpg"/></a></p>
 
 <p>It&rsquo;s simple and direct. There&rsquo;s no doubting what this button does.</p>
 
