--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="/css/paige.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/images/logo_paige.png"/>
-    <link href="http://paigebennett.com/index.xml" rel="alternate" type="application/rss+xml" title="Musings on Design" />
-    <meta name="title" content="http://paigebennett.com">
-    <link rel="canonical" href="http://paigebennett.com">
+    <link href="http://localhost:1313/index.xml" rel="alternate" type="application/rss+xml" title="Musings on Design" />
+    <meta name="title" content="http://localhost:1313">
+    <link rel="canonical" href="http://localhost:1313">
     <meta property="og:title" content="Musings on Design"/>
-    <meta property="og:url" content="http://paigebennett.com"/>
-    <meta property="og:image" content="http://paigebennett.com/images/logo_paige.png"/>   
+    <meta property="og:url" content="http://localhost:1313"/>
+    <meta property="og:image" content="http://localhost:1313/images/logo_paige.png"/>   
     <meta property="og:site_name" content="Musings on Design">
 </head>
 <body>
@@ -70,6 +70,19 @@
         
             <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
     <div class="thumbnail">
+        <a href="../projects/together10">
+			<div class="image-container">
+				<span class="image-container-helper"></span>
+		        <img src="/images.Together10.png"/>
+		    </div>
+        </a>
+		I consulted with Together10 and conducted a messaging study, using the analysis to design changes for an A/B test.        
+    </div>
+</div>
+
+        
+            <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
+    <div class="thumbnail">
         <a href="../projects/vint">
 			<div class="image-container">
 				<span class="image-container-helper"></span>
@@ -102,5 +115,8 @@
 
 
   
-</body>
+<script>document.write('<script src="http://'
+        + (location.host || 'localhost').split(':')[0]
+		+ ':1313/livereload.js?mindelay=10"></'
+        + 'script>')</script></body>
 </html>
