--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -73,7 +73,7 @@
         <a href="../projects/together10">
 			<div class="image-container">
 				<span class="image-container-helper"></span>
-		        <img src="/images.Together10.png"/>
+		        <img src="/images.logo.png"/>
 		    </div>
         </a>
 		I consulted with Together10 and conducted a messaging study, using the analysis to design changes for an A/B test.        
