--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -60,7 +60,7 @@
         <a href="../projects/SpotOn">
 			<div class="image-container">
 				<span class="image-container-helper"></span>
-		        <img src="/images/SpotOn.png"/>
+		        <img src="/images/Logo.png"/>
 		    </div>
         </a>
 		I consulted with SpotOn and created a usability study, analyized feedback and designed recommended changes for SpotOn&#39;s website.        
