--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -70,10 +70,10 @@
         
             <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
     <div class="thumbnail">
-        <a href="../projects/spoton">
+        <a href="../projects/spotonpart2">
 			<div class="image-container">
 				<span class="image-container-helper"></span>
-		        <img src="/images/SpotOn.jpg"/>
+		        <img src="/images/spoton_part2.jpg"/>
 		    </div>
         </a>
 		In Part 2 of my client work, I created a new filter feature for SpotOn&#39;s parkers site. This project includes a persona, task flow, wireframes and a prototype.        
