--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -73,7 +73,7 @@
         <a href="../projects/spotonpart2">
 			<div class="image-container">
 				<span class="image-container-helper"></span>
-		        <img src="/images/spoton_part2.jpg"/>
+		        <img src="/images/spoton_part2.png"/>
 		    </div>
         </a>
 		In Part 2 of my client work, I created a new filter feature for SpotOn&#39;s parkers site. This project includes a persona, task flow, wireframes and a prototype.        
