--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -63,7 +63,7 @@
 		        <img src="/images/SpotOn.png"/>
 		    </div>
         </a>
-		I consulted with SpotOn and created a usability study, analyized feedback and designed recommended changes for SpotOn&#39;s website.        
+		Part 1 of my client work with SpotOn includes creating a usability study, analyzing feedback and designing recommended changes for SpotOn&#39;s website.        
     </div>
 </div>
 
@@ -77,6 +77,19 @@
 		    </div>
         </a>
 		In Part 2 of my client work, I created a new filter feature for SpotOn&#39;s parkers site. This project includes a persona, task flow, wireframes and a prototype.        
+    </div>
+</div>
+
+        
+            <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
+    <div class="thumbnail">
+        <a href="../projects/tightsorscarves">
+			<div class="image-container">
+				<span class="image-container-helper"></span>
+		        <img src="/images/tightsorscarves_logo.png"/>
+		    </div>
+        </a>
+		Tights or Scarves is an app I created to help women in San Francisco choose what to wear for the city&#39;s many microclimates. My work with the app includes creation, design and coding. I will be shipping very soon, so stay tuned!        
     </div>
 </div>
 
