changed tightsorscarves logo

--- a/public/projects/SpotOn/index.html
+++ b/public/projects/SpotOn/index.html
@@ -127,7 +127,7 @@ recommendations, quick wins and recommended next steps for SpotOn Parking.</p>
 
 <p>Beyond this recommendation, SpotOn also implemented our recommendations for quick wins.</p>
 
-<p><a href: "www.pinterest.com" target="_blank">Click here</a> for Part 2 of my work with SpotOn&rsquo;s Parkers page.</p>
+<p><a href: "http://www.paigebennett.com/projects/spotonpart2/" target="_blank">Click here</a> for Part 2 of my work with SpotOn&rsquo;s Parkers page.</p>
 
             
 
