changed pinterest logo

--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -47,7 +47,7 @@
         <a href="../projects/pinterest">
 			<div class="image-container">
 				<span class="image-container-helper"></span>
-		        <img src="/images/pinterest-logo.jpg"/>
+		        <img src="/images/pinterestforsitejpg"/>
 		    </div>
         </a>
 		I created a new filter feature for Pinterest&#39;s main feed. This project includes a persona, task flow, wireframes and a prototype.        
