--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     
+<div class="fixedheader">
 <section class="site-nav">
     <header>
         <nav id="navigation">
@@ -35,8 +36,9 @@
         </nav>
     </header>
 </section>
+</div>
 
-
+<div class="fixedcontent">
 <div class="site-index-top-spacer"></div>
 <div class="blog-cover" style="background-image:url(/images/letters.jpg);">
     
@@ -79,3 +81,4 @@
 </body>
 </html>
 
+</div>
