--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -64,7 +64,7 @@
         <a href="../projects/SpotOn">
 			<div class="image-container">
 				<span class="image-container-helper"></span>
-		        <img src="/images/SpotOn.png"/>
+		        <img src="/images/spoton1.png"/>
 		    </div>
         </a>
         <p class="imgDescription">
@@ -79,7 +79,7 @@
         <a href="../projects/spotonpart2">
 			<div class="image-container">
 				<span class="image-container-helper"></span>
-		        <img src="/images/spoton_part2.png"/>
+		        <img src="/images/spoton1.png"/>
 		    </div>
         </a>
         <p class="imgDescription">
@@ -109,7 +109,7 @@
         <a href="../projects/together10">
 			<div class="image-container">
 				<span class="image-container-helper"></span>
-		        <img src="/images/t10-Logo.png"/>
+		        <img src="/images/together10new.png"/>
 		    </div>
         </a>
         <p class="imgDescription">
@@ -124,7 +124,7 @@
         <a href="../projects/vint">
 			<div class="image-container">
 				<span class="image-container-helper"></span>
-		        <img src="/images/vint-logo.png"/>
+		        <img src="/images/vintnew.png"/>
 		    </div>
         </a>
         <p class="imgDescription">
