--- a/public/projects/pinterest/index.html
+++ b/public/projects/pinterest/index.html
@@ -102,7 +102,7 @@
 
 <p><strong>UI Sketches</strong></p>
 
-<p><a href="/images/UIsketches.jpg" data-lightbox="wireFrames" data-title="WireFrames"><img src="/images/UIsketches.jpg"/></a></p>
+<p><a href="/images/UIsketches.jpg" data-lightbox="wireFrames" data-title="WireFrames"><img src="/images/WireFrames.jpg"/></a></p>
 
 <p>One thing I learned during this part of the process was that the categories needed to be a pop up box, as opposed to a separate window. Sketching out 6 different ways to display categories helped clarify that this was the more effective route.</p>
 
