new messaging for portfolio page

--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -52,7 +52,7 @@
 	        <img src="/images/pinterestforsite.png"/>
 	    </div>
         <p class="imgDescription">
-			<span class="imgDescCenterV">I created a new filter feature for Pinterest&#39;s main feed. This project includes a persona, task flow, wireframes and a prototype.</span>        
+			<span class="imgDescCenterV">Pinterest: Personas. New Feature Creation. Wireframes. Prototypes.</span>        
 		</p>
     </div>
     </a>
@@ -67,7 +67,7 @@
 	        <img src="/images/spoton1.png"/>
 	    </div>
         <p class="imgDescription">
-			<span class="imgDescCenterV">Part 1 of my client work with SpotOn includes creating a usability study, analyzing feedback and designing recommended changes for SpotOn&#39;s website.</span>        
+			<span class="imgDescCenterV">SpotOn: Usability Test. Design Recommendations. Shipped Design.</span>        
 		</p>
     </div>
     </a>
@@ -82,7 +82,7 @@
 	        <img src="/images/spoton1.png"/>
 	    </div>
         <p class="imgDescription">
-			<span class="imgDescCenterV">In Part 2 of my client work, I created a new filter feature for SpotOn&#39;s parkers site. This project includes a persona, task flow, wireframes and a prototype.</span>        
+			<span class="imgDescCenterV">SpotOn Part 2: Personas. Usability Test. New Feature Creation. Wireframes. Design Recommendations.</span>        
 		</p>
     </div>
     </a>
@@ -97,7 +97,7 @@
 	        <img src="/images/newlogo_tightsorscarves.png"/>
 	    </div>
         <p class="imgDescription">
-			<span class="imgDescCenterV">Tights or Scarves is an app I created to help women in San Francisco choose what to wear for the city&#39;s many microclimates. My work with the app includes creation, design and coding. I will be shipping very soon, so stay tuned!</span>        
+			<span class="imgDescCenterV">Tights or Scarves: Passion Project. App Creation, Design &amp; Development. Shipping Soon.</span>        
 		</p>
     </div>
     </a>
@@ -112,7 +112,7 @@
 	        <img src="/images/together10new.png"/>
 	    </div>
         <p class="imgDescription">
-			<span class="imgDescCenterV">I consulted with Together10 and conducted a messaging study, using the analysis to design changes for an A/B test.</span>        
+			<span class="imgDescCenterV">Together10: Messaging Study. A/B Testing. Design Recommendations. Shipped Design.</span>        
 		</p>
     </div>
     </a>
@@ -124,10 +124,10 @@
     <div class="thumbnail imgWrap">
 		<div class="image-container">
 			<span class="image-container-helper"></span>
-	        <img src="/images/vintnew.png"/>
+	        <img src="/images/vint1.png"/>
 	    </div>
         <p class="imgDescription">
-			<span class="imgDescCenterV">After conducting a usability test on the Vint app, I recommended several design changes to create a better user experience.</span>        
+			<span class="imgDescCenterV">Vint: Usability Test. Pain Points Identified. Design Recommendations.</span>        
 		</p>
     </div>
     </a>
