--- a/public/projects/tightsorscarves/index.html
+++ b/public/projects/tightsorscarves/index.html
@@ -82,7 +82,7 @@
 
 <p>This is my first interation. This app will evolve as I make changes.</p>
 
-<p>If you have an Andriod and like to try it out, you can download it <a href="/images/tights-or-scarf-app-1.00.04.apk" target="_blank">here</a>.</p>
+<p>If you have an Andriod and would like to try it out, you can download it <a href="/images/tights-or-scarf-app-1.00.04.apk" target="_blank">here</a>.</p>
 
 <p><em>This is an early build. It will be in the Play Store soon.</em></p>
 
