--- a/public/projects/tightsorscarves/index.html
+++ b/public/projects/tightsorscarves/index.html
@@ -69,7 +69,7 @@
 <p><a href="/images/whiteboard.png" data-lightbox="persona" data-title="Screen Shots"><img src="/images/whiteboard.png"/></a>
 <div class="image-caption">Whiteboarding Out the App</div></p>
 
-<p>I also did an exercise called six-ups, which challenges you to think of six different designs for one task.  It allowed me to take a step back and think of less conventional, more creative ways of presenting information in my app. It also gave me design options, which proved</p>
+<p>I also did an exercise called six-ups, which challenges you to think of six different designs for one task.  It allowed me to take a step back and think of less conventional, more creative ways of presenting information in my app. It also gave me design options to chose from.</p>
 
 <p>Here’s how it works. We ask you how you dress in different weather and what neighborhoods you live and work in.</p>
 
