--- a/public/projects/tightsorscarves/index.html
+++ b/public/projects/tightsorscarves/index.html
@@ -71,7 +71,7 @@
 
 <p>I also did an exercise called six-ups, which challenges you to think of six different designs for one task.  It allowed me to take a step back and think of less conventional, more creative ways of presenting information in my app. It also gave me design options to chose from.</p>
 
-<p>Here’s how it works. We ask you how you dress in different weather and what neighborhoods you live and work in.</p>
+<p>Here’s how it works. We ask you how you dress in different weather and what neighborhoods you live and work in. We then take your dress preferences and using a weather API, suggest clothing based upon the weather forecast and customized to each neighborhood.</p>
 
 <p><a href="/images/screenshots.png" data-lightbox="persona" data-title="Screen Shots"><img src="/images/screenshots.png"/></a>
 <div class="image-caption">A Few Screens</div></p>
