--- a/public/projects/tightsorscarves/index.html
+++ b/public/projects/tightsorscarves/index.html
@@ -76,11 +76,9 @@
 <p><a href="/images/screenshots.png" data-lightbox="persona" data-title="Screen Shots"><img src="/images/screenshots.png"/></a>
 <div class="image-caption">A Few Screens</div></p>
 
-<p>Everyday, you open your app and depending on the weather forecast, Tights or Scarves shows you whether you’ll need tights, scarves, a coat and a few quirky suggestions to keep the experience delightful.</p>
+<p>Everyday you open your app and depending on the weather forecast, Tights or Scarves shows you whether you’ll need tights, scarves, a coat and a few quirky suggestions to keep the experience delightful.</p>
 
 <p>The premise is simple and hopefully will make dressing for SF weather easier and way more fun.</p>
-
-<p>This is my first interation. This app will evolve as I make changes.</p>
 
 <p>If you have an Andriod and would like to try it out, you can download it <a href="/images/tights-or-scarf-app-1.00.04.apk" target="_blank">here</a>.</p>
 
