added oman user study

--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -45,6 +45,21 @@
         <div class="row">
         
             <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
+    <a href="../projects/ethnographyinthemiddleeastpart1">
+    <div class="thumbnail imgWrap">
+		<div class="image-container">
+			<span class="image-container-helper"></span>
+	        <img src="/images/ME.png"/>
+	    </div>
+        <p class="imgDescription">
+			<span class="imgDescCenterV">Ethnography In The Middle East Part 1: Ethnographic Analysis. Personas. Usability Tests.</span>        
+		</p>
+    </div>
+    </a>
+</div>
+
+        
+            <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
     <a href="../projects/pinterest">
     <div class="thumbnail imgWrap">
 		<div class="image-container">
