--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -45,7 +45,7 @@
         <div class="row">
         
             <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
-    <a href="../projects/ethnographyinthemiddleeast">
+    <a href="../projects/Ethnography%20In%20The%20Middle%20East">
     <div class="thumbnail imgWrap">
 		<div class="image-container">
 			<span class="image-container-helper"></span>
