--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -45,11 +45,11 @@
         <div class="row">
         
             <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
-    <a href="../projects/ethnographyinthemiddleeast">
+    <a href="../projects/ethnography-in-the-middle-east">
     <div class="thumbnail imgWrap">
 		<div class="image-container">
 			<span class="image-container-helper"></span>
-	        <img src="/images/ME.png"/>
+	        <img src="/images/oman.jpg"/>
 	    </div>
         <p class="imgDescription">
 			<span class="imgDescCenterV">Ethnography In The Middle East Part 1: Ethnographic Analysis. Personas. Usability Tests.</span>        
@@ -68,6 +68,21 @@
 	    </div>
         <p class="imgDescription">
 			<span class="imgDescCenterV">Pinterest: Personas. New Feature Creation. Wireframes. Prototypes.</span>        
+		</p>
+    </div>
+    </a>
+</div>
+
+        
+            <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
+    <a href="../projects/dell-s-solar-powered-classroom-ethnography-in-kenya">
+    <div class="thumbnail imgWrap">
+		<div class="image-container">
+			<span class="image-container-helper"></span>
+	        <img src="/images/solar.jpg"/>
+	    </div>
+        <p class="imgDescription">
+			<span class="imgDescCenterV">Dell&#39;s Solar Powered Classroom: Ethonography. Personas. Usability Tests.</span>        
 		</p>
     </div>
     </a>
