--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,4 +1,4 @@
-
+NEEDS HEADER
 <div class="fixedcontent">
 
 <article>
@@ -22,7 +22,6 @@ Southerner meets San Francisco. I began my career in a newsroom, made a home in 
 
 <p>I love the written word and figuring out the &lsquo;why?&rsquo; in things.  I&rsquo;m learning to code and build this site piece by piece. Welcome to my journey into UX design. Pull up a chair and I&rsquo;ll pour you a drink.</p>
 
-            
         </section>
 
         
