Fixed up layout files - do not edit in sublime

--- a/public/portfolio/SpotOn/index.html
+++ b/public/portfolio/SpotOn/index.html
@@ -1,5 +1,5 @@
 single
-map[sitelink:http://spf13.com blogsummary:SpotOn: Usability Test. Design Recommendations. Shipped Design. thumbnail:/images/spoton1.png bloglink:SpotOn sourcelink:http://github.com/spf13/spf13.com tags:[personal blog]]
+map[thumbnail:/images/spoton1.png tags:[personal blog] sitelink:http://spf13.com blogsummary:SpotOn: Usability Test. Design Recommendations. Shipped Design. bloglink:SpotOn sourcelink:http://github.com/spf13/spf13.com]
 <br/>
 Title: SpotOn Part 1
 <br/>
