--- a/public/portfolio/dell-s-solar-powered-classroom-ethnography-in-kenya/index.html
+++ b/public/portfolio/dell-s-solar-powered-classroom-ethnography-in-kenya/index.html
@@ -1,5 +1,5 @@
 single
-map[sitelink:http://spf13.com blogsummary:Dell&#39;s Solar Powered Classroom: Ethonography. Personas. Usability Tests. thumbnail:/images/portfolio/solar.jpg bloglink:dell-s-solar-powered-classroom-ethnography-in-kenya sourcelink:http://github.com/spf13/spf13.com tags:[personal blog] modallink:dellsolar]
+map[bloglink:dell-s-solar-powered-classroom-ethnography-in-kenya blogsummary:Dell&#39;s Solar Powered Classroom: Ethonography. Personas. Usability Tests. modallink:dellsolar thumbnail:/images/portfolio/solar.jpg tags:[personal blog] sourcelink:http://github.com/spf13/spf13.com sitelink:http://spf13.com]
 <br/>
 Title: Solar Powered
 <br/>
