--- a/public/portfolio/ethnography-in-the-middle-east/index.html
+++ b/public/portfolio/ethnography-in-the-middle-east/index.html
@@ -1,5 +1,5 @@
 single
-map[bloglink:ethnography-in-the-middle-east blogsummary:Ethnography In The Middle East Part 1: Ethnographic Analysis. Personas. Usability Tests. sourcelink:http://github.com/spf13/spf13.com tags:[personal blog] thumbnail:/images/portfolio/oman.jpg sitelink:http://spf13.com category:Usibility Study modallink:middleeast]
+map[modallink:middleeast bloglink:ethnography-in-the-middle-east sourcelink:http://github.com/spf13/spf13.com blogsummary:Ethnography In The Middle East Part 1: Ethnographic Analysis. Personas. Usability Tests. thumbnail:/images/portfolio/oman.jpg sitelink:http://spf13.com tags:[personal blog] category:Usibility Study]
 <br/>
 Title: Ethnography In The Middle East
 <br/>
