--- a/public/portfolio/pinterest/index.html
+++ b/public/portfolio/pinterest/index.html
@@ -1,5 +1,5 @@
 single
-map[tags:[personal blog] sourcelink:http://github.com/spf13/spf13.com sitelink:http://spf13.com blogsummary:Pinterest: Personas. New Feature Creation. Wireframes. Prototypes. thumbnail:/images/portfolio/pinterestforsite.png bloglink:pinterest modallink:pinterest]
+map[bloglink:pinterest sitelink:http://spf13.com thumbnail:/images/portfolio/pinterestforsite.png blogsummary:Pinterest: Personas. New Feature Creation. Wireframes. Prototypes. tags:[personal blog] sourcelink:http://github.com/spf13/spf13.com modallink:pinterest]
 <br/>
 Title: Pinterest
 <br/>
