--- a/public/portfolio/spotonpart2/index.html
+++ b/public/portfolio/spotonpart2/index.html
@@ -1,5 +1,5 @@
 single
-map[sitelink:http://spf13.com bloglink:spotonpart2 blogsummary:SpotOn Part 2: Personas. Usability Test. New Feature Creation. Wireframes. Design Recommendations. tags:[personal blog] thumbnail:/images/spoton1.png sourcelink:http://github.com/spf13/spf13.com]
+map[tags:[personal blog] sourcelink:http://github.com/spf13/spf13.com blogsummary:SpotOn Part 2: Personas. Usability Test. New Feature Creation. Wireframes. Design Recommendations. sitelink:http://spf13.com bloglink:spotonpart2 thumbnail:/images/spoton1.png]
 <br/>
 Title: SpotOn Part 2
 <br/>
