--- a/public/portfolio/together10/index.html
+++ b/public/portfolio/together10/index.html
@@ -1,5 +1,5 @@
 single
-map[bloglink:together10 thumbnail:/images/together10new.png blogsummary:Together10: Messaging Study. A/B Testing. Design Recommendations. Shipped Design. sourcelink:http://github.com/spf13/spf13.com sitelink:http://spf13.com tags:[personal blog]]
+map[thumbnail:/images/together10new.png bloglink:together10 sitelink:http://spf13.com tags:[personal blog] blogsummary:Together10: Messaging Study. A/B Testing. Design Recommendations. Shipped Design. sourcelink:http://github.com/spf13/spf13.com]
 <br/>
 Title: Together10
 <br/>
