--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,5 +1,5 @@
 single
-map[authorname:Paige Bennett authorbio:Kicking some design ideas around]
+map[authorbio:Kicking some design ideas around authorname:Paige Bennett]
 <br/>
 Title: About Me
 <br/>
