--- a/public/portfolio/dell-s-solar-powered-classroom-ethnography-in-kenya/index.html
+++ b/public/portfolio/dell-s-solar-powered-classroom-ethnography-in-kenya/index.html
@@ -1,5 +1,5 @@
 single
-map[bloglink:dell-s-solar-powered-classroom-ethnography-in-kenya blogsummary:Dell&#39;s Solar Powered Classroom: Ethonography. Personas. Usability Tests. modallink:dellsolar thumbnail:/images/portfolio/solar.jpg tags:[personal blog] sourcelink:http://github.com/spf13/spf13.com sitelink:http://spf13.com]
+map[thumbnail:/images/portfolio/solar.jpg sourcelink:http://github.com/spf13/spf13.com bloglink:dell-s-solar-powered-classroom-ethnography-in-kenya blogsummary:Dell&#39;s Solar Powered Classroom: Ethonography. Personas. Usability Tests. tags:[personal blog] modallink:dellsolar sitelink:http://spf13.com]
 <br/>
 Title: Solar Powered
 <br/>
