--- a/public/portfolio/pinterest/index.html
+++ b/public/portfolio/pinterest/index.html
@@ -1,5 +1,5 @@
 single
-map[bloglink:pinterest sitelink:http://spf13.com thumbnail:/images/portfolio/pinterestforsite.png blogsummary:Pinterest: Personas. New Feature Creation. Wireframes. Prototypes. tags:[personal blog] sourcelink:http://github.com/spf13/spf13.com modallink:pinterest]
+map[sourcelink:http://github.com/spf13/spf13.com bloglink:pinterest blogsummary:Pinterest: Personas. New Feature Creation. Wireframes. Prototypes. modallink:pinterest tags:[personal blog] thumbnail:/images/portfolio/pinterestforsite.png sitelink:http://spf13.com]
 <br/>
 Title: Pinterest
 <br/>
