--- a/public/portfolio/vint/index.html
+++ b/public/portfolio/vint/index.html
@@ -1,5 +1,5 @@
 single
-map[tags:[personal blog] thumbnail:/images/vint1.png bloglink:vint blogsummary:Vint: Usability Test. Pain Points Identified. Design Recommendations.]
+map[blogsummary:Vint: Usability Test. Pain Points Identified. Design Recommendations. tags:[personal blog] thumbnail:/images/vint1.png bloglink:vint]
 <br/>
 Title: Vint
 <br/>
