--- a/public/portfolio/ethnography-in-the-middle-east/index.html
+++ b/public/portfolio/ethnography-in-the-middle-east/index.html
@@ -1,5 +1,5 @@
 single
-map[modallink:middleeast bloglink:ethnography-in-the-middle-east sourcelink:http://github.com/spf13/spf13.com blogsummary:Ethnography In The Middle East Part 1: Ethnographic Analysis. Personas. Usability Tests. thumbnail:/images/portfolio/oman.jpg sitelink:http://spf13.com tags:[personal blog] category:Usibility Study]
+map[sourcelink:http://github.com/spf13/spf13.com modallink:middleeast tags:[personal blog] blogsummary:Ethnography In The Middle East Part 1: Ethnographic Analysis. Personas. Usability Tests. category:Usibility Study thumbnail:/images/portfolio/oman.jpg sitelink:http://spf13.com bloglink:ethnography-in-the-middle-east]
 <br/>
 Title: Ethnography In The Middle East
 <br/>
