--- a/public/portfolio/tightsorscarves/index.html
+++ b/public/portfolio/tightsorscarves/index.html
@@ -1,5 +1,5 @@
 single
-map[bloglink:tightsorscarves thumbnail:/images/newlogo_tightsorscarves.png sitelink:http://spf13.com sourcelink:http://github.com/spf13/spf13.com blogsummary:Tights or Scarves: Passion Project. App Creation, Design &amp; Development. Shipping Soon. tags:[personal blog]]
+map[tags:[personal blog] thumbnail:/images/newlogo_tightsorscarves.png bloglink:tightsorscarves sitelink:http://spf13.com blogsummary:Tights or Scarves: Passion Project. App Creation, Design &amp; Development. Shipping Soon. sourcelink:http://github.com/spf13/spf13.com]
 <br/>
 Title: Tights or Scarves
 <br/>
