--- a/public/portfolio/together10/index.html
+++ b/public/portfolio/together10/index.html
@@ -1,5 +1,5 @@
 single
-map[thumbnail:/images/together10new.png bloglink:together10 sitelink:http://spf13.com tags:[personal blog] blogsummary:Together10: Messaging Study. A/B Testing. Design Recommendations. Shipped Design. sourcelink:http://github.com/spf13/spf13.com]
+map[sourcelink:http://github.com/spf13/spf13.com bloglink:together10 sitelink:http://spf13.com thumbnail:/images/together10new.png tags:[personal blog] blogsummary:Together10: Messaging Study. A/B Testing. Design Recommendations. Shipped Design.]
 <br/>
 Title: Together10
 <br/>
