added new portfolio pages

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,5 +1,5 @@
 single
-map[authorbio:Kicking some design ideas around authorname:Paige Bennett]
+map[authorname:Paige Bennett authorbio:Kicking some design ideas around]
 <br/>
 Title: About Me
 <br/>
