--- a/public/portfolio/pinterest/index.html
+++ b/public/portfolio/pinterest/index.html
@@ -1,5 +1,5 @@
 single
-map[sourcelink:http://github.com/spf13/spf13.com bloglink:pinterest blogsummary:Pinterest: Personas. New Feature Creation. Wireframes. Prototypes. modallink:pinterest tags:[personal blog] thumbnail:/images/portfolio/pinterestforsite.png sitelink:http://spf13.com]
+map[modallink:pinterest bloglink:pinterest blogsummary:Pinterest: Personas. New Feature Creation. Wireframes. Prototypes. thumbnail:/images/portfolio/pinterestforsite.png sitelink:http://spf13.com sourcelink:http://github.com/spf13/spf13.com tags:[personal blog]]
 <br/>
 Title: Pinterest
 <br/>
