--- a/public/portfolio/SpotOn/index.html
+++ b/public/portfolio/SpotOn/index.html
@@ -1,5 +1,5 @@
 single
-map[thumbnail:/images/spoton1.png tags:[personal blog] sitelink:http://spf13.com bloglink:SpotOn blogsummary:SpotOn: Usability Test. Design Recommendations. Shipped Design. sourcelink:http://github.com/spf13/spf13.com]
+map[tags:[personal blog] sitelink:http://spf13.com bloglink:SpotOn thumbnail:/images/spoton1.png sourcelink:http://github.com/spf13/spf13.com blogsummary:SpotOn: Usability Test. Design Recommendations. Shipped Design.]
 <br/>
 Title: SpotOn Part 1
 <br/>
