--- a/public/portfolio/together10/index.html
+++ b/public/portfolio/together10/index.html
@@ -1,5 +1,5 @@
 single
-map[sourcelink:http://github.com/spf13/spf13.com bloglink:together10 sitelink:http://spf13.com thumbnail:/images/together10new.png tags:[personal blog] blogsummary:Together10: Messaging Study. A/B Testing. Design Recommendations. Shipped Design.]
+map[sitelink:http://spf13.com bloglink:together10 blogsummary:Together10: Messaging Study. A/B Testing. Design Recommendations. Shipped Design. thumbnail:/images/together10new.png sourcelink:http://github.com/spf13/spf13.com tags:[personal blog]]
 <br/>
 Title: Together10
 <br/>
