--- a/public/projects/ethnography-in-the-middle-east/index.html
+++ b/public/projects/ethnography-in-the-middle-east/index.html
@@ -1,5 +1,5 @@
 single
-map[modallink:middleeast]
+map[modallink:middleeast subtitle:subtitle not set yet]
 <br/>
 Title: Ethnography In The Middle East
 <br/>
