--- a/public/projects/dell-s-solar-powered-classroom-ethnography-in-kenya/index.html
+++ b/public/projects/dell-s-solar-powered-classroom-ethnography-in-kenya/index.html
@@ -1,5 +1,5 @@
 single
-map[modallink:dellsolar]
+map[subtitle:subtitle not set yet modallink:dellsolar]
 <br/>
 Title: Dell&#39;s Solar Powered Classroom: Ethonography in Kenya
 <br/>
