--- a/public/projects/tightsorscarves/index.html
+++ b/public/projects/tightsorscarves/index.html
@@ -1,5 +1,5 @@
 single
-map[]
+map[modallink:tightsandscarves subtitle:subtitle not set yet]
 <br/>
 Title: Iteration #1: Tights or Scarves App
 <br/>
