--- a/public/projects/together10/index.html
+++ b/public/projects/together10/index.html
@@ -1,5 +1,5 @@
 single
-map[]
+map[subtitle:subtitle not set yet modallink:together10]
 <br/>
 Title: Together10: Messaging &amp; A/B Testing
 <br/>
