--- a/public/portfolio/SpotOn/index.html
+++ b/public/portfolio/SpotOn/index.html
@@ -1,9 +1,5 @@
 single
-<<<<<<< HEAD
-map[tags:[personal blog] sitelink:http://spf13.com bloglink:SpotOn thumbnail:/images/spoton1.png sourcelink:http://github.com/spf13/spf13.com blogsummary:SpotOn: Usability Test. Design Recommendations. Shipped Design.]
-=======
-map[blogsummary:SpotOn: Usability Test. Design Recommendations. Shipped Design. bloglink:SpotOn tags:[personal blog] modallink:spoton1 sourcelink:http://github.com/spf13/spf13.com thumbnail:/images/spoton1.png sitelink:http://spf13.com]
->>>>>>> portfolio updates
+map[thumbnail:/images/spoton1.png bloglink:SpotOn blogsummary:SpotOn: Usability Test. Design Recommendations. Shipped Design. sourcelink:http://github.com/spf13/spf13.com sitelink:http://spf13.com modallink:spoton1 tags:[personal blog]]
 <br/>
 Title: SpotOn Part 1
 <br/>
