--- a/public/portfolio/ethnography-in-the-middle-east/index.html
+++ b/public/portfolio/ethnography-in-the-middle-east/index.html
@@ -1,9 +1,5 @@
 single
-<<<<<<< HEAD
-map[modallink:middleeast bloglink:ethnography-in-the-middle-east sourcelink:http://github.com/spf13/spf13.com thumbnail:/images/portfolio/oman.jpg sitelink:http://spf13.com blogsummary:Ethnography In The Middle East Part 1: Ethnographic Analysis. Personas. Usability Tests. category:Usibility Study tags:[personal blog]]
-=======
-map[sourcelink:http://github.com/spf13/spf13.com category:Usibility Study thumbnail:/images/portfolio/oman.jpg sitelink:http://spf13.com tags:[personal blog] bloglink:ethnography-in-the-middle-east modallink:middleeast blogsummary:Ethnography In The Middle East Part 1: Ethnographic Analysis. Personas. Usability Tests.]
->>>>>>> portfolio updates
+map[modallink:middleeast bloglink:ethnography-in-the-middle-east sourcelink:http://github.com/spf13/spf13.com sitelink:http://spf13.com blogsummary:Ethnography In The Middle East Part 1: Ethnographic Analysis. Personas. Usability Tests. category:Usibility Study tags:[personal blog] thumbnail:/images/portfolio/oman.jpg]
 <br/>
 Title: Ethnography In The Middle East
 <br/>
