--- a/public/portfolio/pinterest/index.html
+++ b/public/portfolio/pinterest/index.html
@@ -1,9 +1,5 @@
 single
-<<<<<<< HEAD
-map[modallink:pinterest bloglink:pinterest blogsummary:Pinterest: Personas. New Feature Creation. Wireframes. Prototypes. thumbnail:/images/portfolio/pinterestforsite.png sitelink:http://spf13.com sourcelink:http://github.com/spf13/spf13.com tags:[personal blog]]
-=======
-map[bloglink:pinterest tags:[personal blog] thumbnail:/images/portfolio/pinterestforsite.png sourcelink:http://github.com/spf13/spf13.com modallink:pinterest blogsummary:Pinterest: Personas. New Feature Creation. Wireframes. Prototypes. sitelink:http://spf13.com]
->>>>>>> portfolio updates
+map[sitelink:http://spf13.com sourcelink:http://github.com/spf13/spf13.com tags:[personal blog] bloglink:pinterest modallink:pinterest thumbnail:/images/portfolio/pinterestforsite.png blogsummary:Pinterest: Personas. New Feature Creation. Wireframes. Prototypes.]
 <br/>
 Title: Pinterest
 <br/>
