--- a/public/portfolio/spotonpart2/index.html
+++ b/public/portfolio/spotonpart2/index.html
@@ -1,9 +1,5 @@
 single
-<<<<<<< HEAD
-map[bloglink:spotonpart2 tags:[personal blog] thumbnail:/images/spoton1.png blogsummary:SpotOn Part 2: Personas. Usability Test. New Feature Creation. Wireframes. Design Recommendations. sitelink:http://spf13.com sourcelink:http://github.com/spf13/spf13.com]
-=======
-map[thumbnail:/images/spoton1.png tags:[personal blog] modallink:spoton2 bloglink:spotonpart2 sitelink:http://spf13.com blogsummary:SpotOn Part 2: Personas. Usability Test. New Feature Creation. Wireframes. Design Recommendations. sourcelink:http://github.com/spf13/spf13.com]
->>>>>>> portfolio updates
+map[modallink:spoton2 thumbnail:/images/spoton1.png tags:[personal blog] sitelink:http://spf13.com bloglink:spotonpart2 blogsummary:SpotOn Part 2: Personas. Usability Test. New Feature Creation. Wireframes. Design Recommendations. sourcelink:http://github.com/spf13/spf13.com]
 <br/>
 Title: SpotOn Part 2
 <br/>
