--- a/public/portfolio/dell-s-solar-powered-classroom-ethnography-in-kenya/index.html
+++ b/public/portfolio/dell-s-solar-powered-classroom-ethnography-in-kenya/index.html
@@ -1,9 +1,5 @@
 single
-<<<<<<< HEAD
-map[bloglink:dell-s-solar-powered-classroom-ethnography-in-kenya thumbnail:/images/portfolio/solar.jpg modallink:dellsolar tags:[personal blog] sourcelink:http://github.com/spf13/spf13.com blogsummary:Dell&#39;s Solar Powered Classroom: Ethonography. Personas. Usability Tests. sitelink:http://spf13.com]
-=======
-map[blogsummary:Dell&#39;s Solar Powered Classroom: Ethonography. Personas. Usability Tests. tags:[personal blog] thumbnail:/images/portfolio/solar.jpg bloglink:dell-s-solar-powered-classroom-ethnography-in-kenya sitelink:http://spf13.com modallink:dellsolar sourcelink:http://github.com/spf13/spf13.com]
->>>>>>> portfolio updates
+map[tags:[personal blog] sitelink:http://spf13.com bloglink:dell-s-solar-powered-classroom-ethnography-in-kenya thumbnail:/images/portfolio/solar.jpg blogsummary:Dell&#39;s Solar Powered Classroom: Ethonography. Personas. Usability Tests. sourcelink:http://github.com/spf13/spf13.com modallink:dellsolar]
 <br/>
 Title: Solar Powered
 <br/>
