--- a/public/portfolio/tightsorscarves/index.html
+++ b/public/portfolio/tightsorscarves/index.html
@@ -1,9 +1,5 @@
 single
-<<<<<<< HEAD
-map[blogsummary:Tights or Scarves: Passion Project. App Creation, Design &amp; Development. Shipping Soon. sourcelink:http://github.com/spf13/spf13.com tags:[personal blog] thumbnail:/images/newlogo_tightsorscarves.png bloglink:tightsorscarves sitelink:http://spf13.com]
-=======
-map[bloglink:tightsorscarves sourcelink:http://github.com/spf13/spf13.com blogsummary:Tights or Scarves: Passion Project. App Creation, Design &amp; Development. Shipping Soon. modallink:tightsandscarves tags:[personal blog] thumbnail:/images/newlogo_tightsorscarves.png sitelink:http://spf13.com]
->>>>>>> portfolio updates
+map[thumbnail:/images/newlogo_tightsorscarves.png modallink:tightsandscarves tags:[personal blog] sitelink:http://spf13.com bloglink:tightsorscarves blogsummary:Tights or Scarves: Passion Project. App Creation, Design &amp; Development. Shipping Soon. sourcelink:http://github.com/spf13/spf13.com]
 <br/>
 Title: Tights or Scarves
 <br/>
