--- a/public/portfolio/together10/index.html
+++ b/public/portfolio/together10/index.html
@@ -1,9 +1,5 @@
 single
-<<<<<<< HEAD
-map[sitelink:http://spf13.com bloglink:together10 blogsummary:Together10: Messaging Study. A/B Testing. Design Recommendations. Shipped Design. thumbnail:/images/together10new.png sourcelink:http://github.com/spf13/spf13.com tags:[personal blog]]
-=======
-map[sitelink:http://spf13.com thumbnail:/images/together10new.png blogsummary:Together10: Messaging Study. A/B Testing. Design Recommendations. Shipped Design. sourcelink:http://github.com/spf13/spf13.com modallink:together10 bloglink:together10 tags:[personal blog]]
->>>>>>> portfolio updates
+map[thumbnail:/images/together10new.png sitelink:http://spf13.com blogsummary:Together10: Messaging Study. A/B Testing. Design Recommendations. Shipped Design. tags:[personal blog] sourcelink:http://github.com/spf13/spf13.com modallink:together10 bloglink:together10]
 <br/>
 Title: Together10
 <br/>
