--- a/public/portfolio/vint/index.html
+++ b/public/portfolio/vint/index.html
@@ -1,9 +1,5 @@
 single
-<<<<<<< HEAD
-map[tags:[personal blog] thumbnail:/images/vint1.png bloglink:vint blogsummary:Vint: Usability Test. Pain Points Identified. Design Recommendations.]
-=======
-map[blogsummary:Vint: Usability Test. Pain Points Identified. Design Recommendations. modallink:vint tags:[personal blog] thumbnail:/images/vint1.png bloglink:vint]
->>>>>>> portfolio updates
+map[bloglink:vint blogsummary:Vint: Usability Test. Pain Points Identified. Design Recommendations. modallink:vint tags:[personal blog] thumbnail:/images/vint1.png]
 <br/>
 Title: Vint
 <br/>
