updated projects layout for images. Update css to have portolio align be left.

--- a/public/projects/ethnography-in-the-middle-east/index.html
+++ b/public/projects/ethnography-in-the-middle-east/index.html
@@ -117,14 +117,14 @@
 
 <p>In Omani culture, problems are talked around versus talked about. This lessens the chance that someone might shame a business associate by pointing out conflict.</p>
 
-<p><a href="/images/problem.jpg" data-lightbox="persona" data-title="Problems"><img src="/images/problems.jpg"/></a>
+<p><img class="img-responsive img-centered" src="/images/problems.jpg" alt="">
 <div class="image-caption">The concept simplified.</div></p>
 
 <p><strong>Creating The Persona</strong></p>
 
 <p>After several weeks of research, it came time to create personas for the company we were building. Here’s one of the personas that I created:</p>
 
-<p><a href="/images/Omanpersona.png" data-lightbox="persona" data-title="OmanPersona"><img src="/images/Omanpersona.png"/></a>
+<p><img class="img-responsive img-centered" src="/images/Omanpersona.png" alt="">
 <div class="image-caption">This is one of 10 personas created within the first few weeks of research.</div></p>
 
 <p><strong>Conclusion</strong></p>
