--- a/public/projects/pinterest/index.html
+++ b/public/projects/pinterest/index.html
@@ -90,8 +90,9 @@
 
 <p>As a solution, I created a filter feature that allows you to filter your main feed by category.</p>
 
-<p>To give you a better idea, here&rsquo;s a video of the prototype I created.
-<iframe width="560" height="420" src="//www.youtube.com/embed/o3G0VbCgDjo" frameborder="0" allowfullscreen></iframe></p>
+<p>To give you a better idea, here&rsquo;s a video of the prototype I created.</p>
+
+<iframe width="560" height="420" src="//www.youtube.com/embed/o3G0VbCgDjo" frameborder="0" allowfullscreen></iframe>
 
 <p><strong>Purpose</strong></p>
 
@@ -103,7 +104,7 @@
 
 <p>Alee wants to be able to see specific categories of pins that pinners she follows have shared. With this function, Alee can take her curated content and curate it further, creating a main feed that features only those categories she&rsquo;s interested in.</p>
 
-<p><a href="/images/AleePersona.jpg" data-lightbox="persona" data-title="Alee Persona"><img src="/images/AleePersona.jpg"/></a>
+<p><img class="img-responsive img-centered" src="/images/AleePersona.jpg" alt="">
 <div class="image-caption">Alee Persona</div></p>
 
 <p><strong>Process</strong></p>
@@ -128,11 +129,11 @@
 
 <p>Alee&rsquo;s motive for using Pinterest is to reference pins she likes. I decided that she would most likely either &ldquo;heart&rdquo; a pin or &ldquo;pin&rdquo; a pin to one of her DIY boards. Thus, my task flow shows her journey with Pinterest ending in either of these two actions.</p>
 
-<p><a href="/images/Pinterest Task Flow.jpg" data-lightbox="task-flow" data-title="Pinterest Task Flow"><img src="/images/Pinterest Task Flow.jpg"/></a></p>
+<p><img class="img-responsive img-centered" src="/images/Pinterest Task Flow.jpg" alt=""></p>
 
 <p><strong>UI Sketches</strong></p>
 
-<p><a href="/images/UIsketches.jpg" data-lightbox="wireFrames" data-title="WireFrames"><img src="/images/WireFrames.jpg"/></a></p>
+<p><img class="img-responsive img-centered" src="/images/WireFrames.jpg" alt=""></p>
 
 <p>One thing I learned during this part of the process was that the categories needed to be a pop up box, as opposed to a separate window. Sketching out 6 different ways to display categories helped clarify that this was the more effective route.</p>
 
@@ -141,22 +142,22 @@
 <p>After creating my wireframes, I did a short usability study with a few people and noticed something immediately: the filter button was confusing.
 I had used the filter icon that&rsquo;s part of Andriod design convention. However, the feedback I received was that users thought the button was meant to sort content&hellip;.not choose a category. Uh oh!</p>
 
-<p><a href="/images/filter.jpg" data-lightbox="filter-example" data-title="Filter Example"><img src="/images/filter.jpg"/></a>
+<p><img class="img-responsive img-centered" src="/images/filter.jpg" alt="">
 <div class="image-caption">Does this filter or sort?</div></p>
 
 <p>At first, I thought to use the same categories icon that Pinterest has on its site. However, this icon on mobile can be confusing. After looking at how other Android apps displayed their filter button, I used Fitmob as inspiration.</p>
 
-<p><a href="/images/fitmob.jpg" data-lightbox="fitmob-example" data-title="Fitmob Example"><img src="/images/fitmob.jpg"/></a></p>
+<p><img class="img-responsive img-centered" src="/images/fitmob.jpg" alt=""></p>
 
 <p>It&rsquo;s simple and direct. There&rsquo;s no doubting what this button does.</p>
 
 <p>My wireframes will help explain:</p>
 
-<p><a href="/images/Wireframes 1.jpg" data-lightbox="wireframes-group" data-title="Wireframe 1"><img src="/images/Wireframes 1.jpg"/></a></p>
+<p><img class="img-responsive img-centered" src="/images/Wireframes 1.jpg" alt=""></p>
 
-<p><a href="/images/Updatedwireframe.jpg" data-lightbox="wireframes-group" data-title="Wireframe 2"><img src="/images/Updatedwireframe.jpg"/></a></p>
+<p><img class="img-responsive img-centered" src="/images/Updatedwireframe.jpg" alt=""></p>
 
-<p><a href="/images/Wireframes 4.jpg" data-lightbox="wireframes-group" data-title="Wireframe 4"><img src="/images/Wireframes 4.jpg"/></a></p>
+<p><img class="img-responsive img-centered" src="/images/Wireframes 4.jpg" alt=""></p>
 
 <p><strong>Prototype</strong></p>
 
@@ -178,7 +179,7 @@ I had used the filter icon that&rsquo;s part of Andriod design convention. Howev
 
 <p>While the filter button helps users curate their content, I believe that there&rsquo;s much more to explore. This one feature only scratched the surface. So stay tuned for more. This story is certainly not over.</p>
 
-<p>Questions or feedback? Reach out to me: <a href="https://paige@tradecrafted.com/" target="_blank">paige@tradecrafted.com</a></p>
+<p>Questions or feedback? Reach out to me: <a href="mailto://paige@tradecrafted.com/">paige@tradecrafted.com</a></p>
 
 <p><em>I do not work for Pinterest. I just love the app and owe most of my homemade dinners to Pinterest inspiration.</em></p>
 
